# practica_iso

./: .gitignore  README.md
python/app/: configuracion_entorno.sh  pyproject.toml  requirements.txt
python/app/app/: README.rst  pyproject.toml
python/app/app/src/app/: __main__.py  app.py
python/app/resources/: abi.json  account_key.txt  bytecode.txt  config.json  database.db  direccion_contrato.txt  owner_address.txt  pruebaCreacion.db
python/app/src/app/:  contacto.py  __main__.py  base_datos.py  chat.py  config_manager.py  contrato.py  crud.py  cyphersuite.py  demo.py  erc20andEthSender.py  excepciones.py  file_manager.py  mensaje.py  observer.py  setup.py  sockets.py  usuario.py
python/app/src/app.dist-info/: METADATA
python/app/src/app/ejemplo/: suma.py
python/app/src/app/factories/: chat_factory.py  factory.py
python/app/src/app/gui/: app.py  chat_frame.py  index.html  main_frame.py  money_frame.py  new_chat_frame.py  new_contact_frame.py  user_frame.py
python/app/src/gui/: app.py  chat_frame.py  main_frame.py  new_chat_frame.py  new_contact_frame.py
python/app/tests/: test_base_datos.py  test_chat.py  test_config_manager.py  test_contrato.py  test_crud.py  test_cyphersuite.py  test_file_manager.py  test_mensaje.py  test_observer.py  test_setup.py  test_sockets.py  test_usuario.py
python/app/tests/test_ejemplo/: test_suma.py
python/app/tests/test_factories/: test_chat_factory.py
python/app/tests/tests_gui/: test_app.py  test_chat_frame.py  test_main_frame.py  test_money_frame.py  test_new_chat_frame.py  test_new_contact_frame.py
(+19 files in other folders)
