[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["David Gilarranz Ortega <d.gilarranz1@usp.ceu.es>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.31.0"
cryptography = "^38.0.1"
mock = "^4.0.3"
requests = "^2.28.1"
pytest-asyncio = "^0.19.0"
beeware = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
